[New] modificata la gestione del wall con un custom post type (lm_wall) e una taxonomy dedicata (lm_wall_category) [New] aggiunte le classi per gestire la condivisione dei post. aggiunta anche la colonna con il conteggio delle condivisioni nel backoffice del wall [New] aggiunto endpoint per l'inserimento di un post (solo testo per ora non immagini in allegato) POST  /wp-json/lm-sf-rest-api/v1.0.0/wall parametri sono 'title', 'content', 'author', 'status', 'categories', 'format', 'file'

--- a/assets/1.0.0/lm-sf-rest-api.css
+++ b/assets/1.0.0/lm-sf-rest-api.css
@@ -9,3 +9,9 @@ th.column-lm-sf-like {
     padding: 0;
     text-align: left;
 }
+
+th.column-lm-sf-sharing {
+    width: 3em;
+    padding: 0;
+    text-align: left;
+}
